Fix: home intro shape too small on mobile

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -67,9 +67,9 @@
             }
 
             @include a.respond(screen_500) {
-                background-size: 170rem;
-                top: -33rem;
-                left: -64rem;
+                background-size: 180rem;
+                top: -25rem;
+                left: -65rem;
             }
         }
 
